--- a/all_apps/Facts/templates/facts_templates/1_facts_main_page.html
+++ b/all_apps/Facts/templates/facts_templates/1_facts_main_page.html
@@ -17,7 +17,8 @@
         
         {% if user.is_authenticated %}
 
-           <span class="user_name"> {{user.name}}</span> , you can add your own facts by clicking here.
+           <span class="user_name"> {{user.name}}</span> , you can add your own facts by clicking 
+           <a href="{% url 'user_facts_page' %}">Here</a> .
         
         {% else %}
         
