--- a/all_apps/User/templates/user_css/1_register.css
+++ b/all_apps/User/templates/user_css/1_register.css
@@ -29,11 +29,6 @@
 }
 
 
-register-wrapper button:disabled,
-button[disabled]{
-    visibility: hidden;
-    
-}
 
 .register-wrapper .line{
     font-family: Georgia, "Times New Roman", Times, serif;
@@ -43,16 +38,15 @@ button[disabled]{
 	font-size: 15px;
 	margin: 0;
 	outline: 0;
-	padding: 15px;
+	padding: 6px;
 	width: 100%;
 	box-sizing: border-box; 
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box; 
 	background-color: #e8eeef;
-	
 	-webkit-box-shadow: 0 1px 0 rgba(0,0,0,0.03) inset;
 	box-shadow: 0 1px 0 rgba(0,0,0,0.03) inset;
-	margin-bottom: 30px;
+	margin-bottom: 10px;
 
 }
 
@@ -86,3 +80,10 @@ button[disabled]{
     
 }
 
+label{
+    display: inline-block;
+    -webkit-text-stroke: 0.4px black;
+    color: green;
+    padding-bottom: 3px;
+    font-size: large;
+}
