--- a/all_apps/User/templates/user_templates/1_register.html
+++ b/all_apps/User/templates/user_templates/1_register.html
@@ -175,7 +175,7 @@
         
         let body = {
             'email':email_value,
-            'api_key_fetch':'{{API_KEY_FETCH}}'
+            'api_key_fetch':'{{api_key_fetch}}'
 
         };
     
