--- a/all_apps/Facts/templates/facts_templates/2_user_facts_page.html
+++ b/all_apps/Facts/templates/facts_templates/2_user_facts_page.html
@@ -68,17 +68,84 @@
     getCategories();
 
 
+    async function SaveCatFetch(input_id, old_cat_name, csrf_id ){
+        console.log(input_id)
+        console.log(old_cat_name)
+        console.log(csrf_id)
+
+        let input_line = document.getElementById(input_id);
+        let new_cat_name = input_line.value;
+        let csrf = document.getElementById(csrf_id).value
+        
+        url = "{% url 'edit_category_fetch' %}";
+
+        let body ={
+                    'old_name':old_cat_name,
+                    'new_name':new_cat_name,
+                    'api_key_fetch':'{{api_key_fetch}}'
+        }
+
+
+        fetch(url,
+            {
+                method:'POST',
+                headers: {
+                            'Content-type':'application/json',
+                            'Accept': 'application/json',
+                            'X-CSRFToken': csrf
+                        },
+                
+                body: JSON.stringify(body)
+            }
+
+        )
+        .then( (response)=> response.json())
+        .then( function(data){
+
+            console.log(data)
+
+        })
+    
+        
+    }
+
     async function EditToSave(line_id, edit_btn_id,) {
         let edit_btn = document.getElementById(edit_btn_id)
         let line = document.getElementById(line_id)
-
+        console.log(line)
+        
         let new_input =
             `
-            <form>
-                <input id="" name="" type="text" class="" value=${line.value}>
-            </form>
-        `
-        console.log(new_input)
+            
+                <input id="${line_id}_csrf" type="hidden" name="csrfmiddlewaretoken" value={{csrf_token}}>
+                <input id="${line_id}_input" 
+                       name="${line_id}_input" 
+                       type="text" 
+                       value=${line.textContent}>
+            
+            `
+        
+        let new_form_element = document.createElement('form');
+        new_form_element.innerHTML = new_input;
+        
+        line.replaceWith(new_form_element)
+
+        let save_btn = document.createElement('button');
+        save_btn.id = `"${line_id}_save_btn"`;
+        save_btn.innerHTML = "Save";
+
+        edit_btn.replaceWith(save_btn);
+        
+
+        
+        save_btn.addEventListener('click',function(){
+
+            SaveCatFetch(`${line_id}_input`,line.textContent,`${line_id}_csrf`)
+
+            
+
+        })
+        
 
 
 
