--- a/all_apps/Facts/templates/facts_templates/2_user_facts_page.html
+++ b/all_apps/Facts/templates/facts_templates/2_user_facts_page.html
@@ -68,11 +68,15 @@
     getCategories();
 
 
-    async function SaveCatFetch(input_id, old_cat_name, csrf_id ){
-        console.log(input_id)
-        console.log(old_cat_name)
-        console.log(csrf_id)
 
+    async function SaveCatFetch(
+                                input_id, 
+                                old_cat_name, 
+                                csrf_id,
+                                ){
+
+        let new_cat_fetch;
+                
         let input_line = document.getElementById(input_id);
         let new_cat_name = input_line.value;
         let csrf = document.getElementById(csrf_id).value
@@ -86,7 +90,8 @@
         }
 
 
-        fetch(url,
+        let r = await fetch(url,
+        
             {
                 method:'POST',
                 headers: {
@@ -99,20 +104,17 @@
             }
 
         )
-        .then( (response)=> response.json())
-        .then( function(data){
 
-            console.log(data)
+        return await r.json()
+       
 
-        })
-    
-        
+ 
     }
 
     async function EditToSave(line_id, edit_btn_id,) {
         let edit_btn = document.getElementById(edit_btn_id)
         let line = document.getElementById(line_id)
-        console.log(line)
+
         
         let new_input =
             `
@@ -136,21 +138,28 @@
 
         edit_btn.replaceWith(save_btn);
         
-
         
-        save_btn.addEventListener('click',function(){
+        save_btn.addEventListener('click', function(){
+
+            // let new_name_text = document.getElementById(`${line_id}_input`).value
 
             SaveCatFetch(`${line_id}_input`,line.textContent,`${line_id}_csrf`)
-
+            .then( function(response){
+                let new_name_text = response.message;
+                        
             
+                save_btn.replaceWith(edit_btn)
+                new_form_element.replaceWith(line)
+                line.textContent = new_name_text
 
-        })
-        
+            })
 
 
+    })
+
+}
 
 
-    }
 
 
     async function getCategories() {
